tests/snapshots/motion__demo-settled.snap
---
source: tests/motion.rs
expression: "testing::snapshot(3, demo(t0, MotionMode::Full, ms(500)))"
---
== dark-truecolor · 40x3
✓ Done
                        ▸ Selected
patch applied to 3 files
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..6 fg=Foreground bg=Background
r0 c6..40 bg=Background
r1 c0..24 bg=Background
r1 c24..25 fg=Primary bg=Background
r1 c25..26 bg=Background
r1 c26..34 fg=Foreground bg=Background
r1 c34..40 bg=Background
r2 c0..24 fg=Muted bg=Background
r2 c24..40 bg=Background

== dark-truecolor · 80x3
✓ Done
                        ▸ Selected
patch applied to 3 files
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..6 fg=Foreground bg=Background
r0 c6..80 bg=Background
r1 c0..24 bg=Background
r1 c24..25 fg=Primary bg=Background
r1 c25..26 bg=Background
r1 c26..34 fg=Foreground bg=Background
r1 c34..80 bg=Background
r2 c0..24 fg=Muted bg=Background
r2 c24..80 bg=Background

== dark-truecolor · 120x3
✓ Done
                        ▸ Selected
patch applied to 3 files
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..6 fg=Foreground bg=Background
r0 c6..120 bg=Background
r1 c0..24 bg=Background
r1 c24..25 fg=Primary bg=Background
r1 c25..26 bg=Background
r1 c26..34 fg=Foreground bg=Background
r1 c34..120 bg=Background
r2 c0..24 fg=Muted bg=Background
r2 c24..120 bg=Background

== no-color · 40x3
✓ Done
                        ▸ Selected
patch applied to 3 files

== no-color · 80x3
✓ Done
                        ▸ Selected
patch applied to 3 files

== no-color · 120x3
✓ Done
                        ▸ Selected
patch applied to 3 files

== ascii · 40x3
Y Done
                        > Selected
patch applied to 3 files

== ascii · 80x3
Y Done
                        > Selected
patch applied to 3 files

== ascii · 120x3
Y Done
                        > Selected
patch applied to 3 files
